samples/_failures_safe/1761456802_eec0e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a73e616.c: In function ‘main’:
./samples/SAFE/__tmp_1a73e616.c:188:5: error: expected expression at end of input
  188 |     output_file[strcspn(output_file, "\n")] =
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_1a73e616.c:188:5: error: expected declaration or statement at end of input
